[workspace]
members = [
    "contracts/amp-governance/*",
    # "contracts/proxies/*",
    # "contracts/dao-lst",
    # "contracts/alliance-hub-lst",
    # "contracts/lst-factory",
    "packages/*",
]
# Needs to be excluded for release builds
# Also look in .carg/config to enable git-fetch-with-cli
exclude = ["packages/eris-tests"]

[profile.release.package.eris]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true

# [profile.release]
# opt-level = 3
# debug = false
# rpath = false
# lto = true
# debug-assertions = false
# codegen-units = 1
# panic = 'abort'
# incremental = false
