[package]
name = "eris-alliance-hub-lst-terra"
version = "1.1.1"
authors = ["devs <devs@erisprotocol.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/erisprotocol/contracts-kujira"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
X-whitewhale-X = []
X-kujira-X = []
X-injective-X = []
X-osmosis-X = []
X-sei-X = []
X-terra-X = []
default = ["X-terra-X"]

[dependencies]
cosmwasm-std = { version = "1.1.3", features = ["staking"] }
cosmwasm-schema = "1.1.3"
cw2 = "1.1.0"
cw20 = "1.1.0"
cw-storage-plus = "0.15.1"
eris = { path = "../../packages/eris" }
eris-chain-adapter = { path = "../../packages/eris-chain-adapter" }
eris-chain-shared = { path = "../../packages/eris-chain-shared" }
itertools = "0.10"
thiserror = { version = "1.0" }
protobuf = "3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", default-features = false, rev = "3b44a4044b823a145730f66ffaf7ae4205b2cd35" }
alliance-protocol = { git = "https://github.com/terra-money/alliance-protocol", default-features = false, rev = "e39d9648a5560a981b59ec9eacd8bc453d1500cb" }
kujira = "0.7.13"
