[package]
name = "eris-dao-lst-kujira"
version = "1.4.0"
authors = ["devs <devs@erisprotocol.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/erisprotocol/contracts-kujira"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
X-whitewhale-X = []
X-kujira-X = []
X-injective-X = []
X-osmosis-X = []
X-sei-X = []
X-terra-X = []
default = ["X-kujira-X"]

[dependencies]
cosmwasm-std = { version = "1.1.3", features = ["staking"] }
cosmwasm-schema = "1.1.3"
cw2 = "1.1.0"
cw20 = "1.1.0"
cw-storage-plus = "0.15.1"
eris = { path = "../../packages/eris" }
eris-chain-adapter = { path = "../../packages/eris-chain-adapter" }
eris-chain-shared = { path = "../../packages/eris-chain-shared" }
itertools = "0.10"
thiserror = { version = "1.0" }
protobuf = "3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", default-features = false, rev = "3b44a4044b823a145730f66ffaf7ae4205b2cd35" }
kujira = "0.7.13"
